MongoDB connected, Models created

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI="your_mongodb_atlas_connection_string"
+MONGO_URI="mongodb+srv://dbofantidotebd:jqURsRahimKarim........JabbarBarkF5CMyAOZoLKjqURsatYusuf.........58099085.............@cluster0.mbgwa.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=5000
